[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/UI/elements/LoginPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LilitaOne.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://prefabs/UI/BaseSignalButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/components/popup/Popup_Frame3.png" type="Texture" id=5]
[ext_resource path="res://assets/themes/LineEditWithIcon.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="LoginPopup" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -360.0
margin_right = 320.0
margin_bottom = 360.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="PopupTexture" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 31
patch_margin_right = 20
patch_margin_bottom = 43

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 24.0
margin_right = 102.0
margin_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "LOGIN"
align = 1
valign = 1

[node name="LabelsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -271.0
margin_top = 112.0
margin_right = 271.0
margin_bottom = 350.0
custom_constants/separation = 30

[node name="Username" type="LineEdit" parent="LabelsContainer"]
margin_right = 542.0
margin_bottom = 104.0
rect_min_size = Vector2( 542, 104 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 8
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
context_menu_enabled = false
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="LabelsContainer"]
margin_top = 134.0
margin_right = 542.0
margin_bottom = 238.0
rect_min_size = Vector2( 542, 104 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 8
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
secret = true
context_menu_enabled = false
placeholder_text = "Password"

[node name="LoginButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = 24.0
margin_right = 251.0
margin_bottom = 120.0

[node name="LoginLabel" type="Label" parent="LoginButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -19.0
margin_right = 45.5
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "LOGIN"
align = 1
valign = 1

[node name="OrLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = 149.0
margin_right = 20.5
margin_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "OR"
align = 1
valign = 1

[node name="SignupButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -251.0
margin_top = -144.0
margin_right = 251.0
margin_bottom = -48.0

[node name="SignupLabel" type="Label" parent="SignupButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -19.0
margin_right = 45.5
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "SIGN UP"
align = 1
valign = 1

[node name="LoginRequest" type="HTTPRequest" parent="."]
